cli/src/tests/error/if.sibs
IF $variable == "one" || $variable != "two" [ ] ELSE [ ];
IF $variable == "one" || && $variable != "two" [ ] ELSE [ ];
IF $variable == "one" ??? $variable != "two" [ ] ELSE [ ];
IF $variable == "one" $variable != "two" [ @env::is_os; ];
IF && $variable == "one" [ ] ELSE [ ];
IF $variable == "one [ ] ELSE [ ];
IF $variable == "one" [ @env::is_os; ] IF $variable == "one" || $variable != "two" [ ] ELSE [ ];
IF $variable == "one" [ @env::is_os; ] IF $variable == "one" || && $variable != "two" [ ] ELSE [ ];
IF $variable == "one" [ @env::is_os; ] IF $variable == "one" ??? $variable != "two" [ ] ELSE [ ];
IF $variable == "one" [ @env::is_os; ] IF $variable == "one" $variable != "two" [ @env::is_os; ];
IF $variable == "one" [ @env::is_os; ] IF && $variable == "one" [ ] ELSE [ ];
IF $variable == "one" [ @env::is_os; ] IF $variable == "one [ ] ELSE [ ];
IF $variable == "one" [ @env::is_os ];
IF;
IF ELSE;